--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 		<div class="dnesni">
 		<h2>Dnešní nabídka</h2>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-		</div>
 		<!-- produkt 1 -->
 		<div class="karticky">
 		<div class="karticka">
@@ -96,6 +95,7 @@
 			</div>
 			</div>
 			</div>
+			</div>
 		</div>
 
 
@@ -119,9 +119,11 @@
 
 
 	<!-- Patička -->
+	<div class="pozadipaticka">
 		<div class="paticka">
 		<p>©2020, Czechitas. Vytvořeno pro kurz Staň se kóderkou.</p>
 		</div>
+	</div>
 
 
 
